--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ body{
     width: 1024px;
 }
 header{
-    background: cornflowerblue;
     height: 118px;
     text-align: center;
 }
@@ -16,10 +15,23 @@ nav{
     height: 40px;
 }
 main{
-    background: orange;
     height: 400px;
+    text-align: center;
+    padding-top: 80px;
+    padding-left: 240px;
+    padding-right: 240px;
 }
 footer{
     background: green;
     height: 100px;
+}
+h1{
+    font-size: 84px;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif; // jesli user nie ma Arial, zaladuj Helverica, itd...
+}
+p{
+    font-size: 20px;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
 }
