--- a/style.css
+++ b/style.css
@@ -28,10 +28,14 @@ footer{
 h1{
     font-size: 84px;
     color: white;
-    font-family: Arial, Helvetica, sans-serif; // jesli user nie ma Arial, zaladuj Helverica, itd...
+    font-family: Arial, Helvetica, sans-serif; /* jesli user nie ma Arial, zaladuj Helverica, itd... */
 }
 p{
     font-size: 20px;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
+}
+a{
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
 }
