--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
+html{
+    /* Nie widzimy przez na dole konca obrazka, kosztem przycinania
+     obrazka gdy tak owe tlo mialo by zostac pokazane */
+    height: 100%;
+}
 body{
     background: #452f2f;
+    background-image: url("images/background-adare-restaurant.jpg");
+    background-size: cover; /* Dopasowanie do wielkosci okna */
+    background-repeat: no-repeat; /* Brak powtarzania obrazka */
+    background-position: center; /* Jesli juz ucina obrazek, to dalej on jest na srodku */
+
 }
 .container{
     margin-left: auto;
